--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1"
+    "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "prisma": "^4.15.0"
   }
 }
